# subskribinto

./: Cargo.toml  LICENSE  README.md  pjs_decode
jsubskribinto/: deno.json  main.ts  package.json  signer.ts  tx.ts
jsubskribinto/.papi/: polkadot-api.json
jsubskribinto/.papi/descriptors/: package.json
metadata/: kreivo.scale
src/: config.rs  lib.rs  main.rs  signer.rs  tx.rs
