[package]
name = "subskribinto"
description = "A temporary CLI-based utility to sign transactions on Kreivo using Signed extrinsics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bip39 = "2.1.0"
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4.3"
inquire = { version = "0.7.5" }
codec = { package = "parity-scale-codec", version = "3.7.5" }
sp-core = "36.1.0"
subxt = { version = "0.42.1" }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
scale-info = "2.11.6"
